--- a/src/app/modal/view-modal/view-modal.page.html
+++ b/src/app/modal/view-modal/view-modal.page.html
@@ -2,8 +2,8 @@
  <!--  <ion-toolbar>
     <ion-title>view-modal</ion-title>
     <ion-button color="primary" (click)="dismiss()" >close</ion-button>
-  </ion-toolbar> -->
-  <ion-segment mode='md' (ionChange)="segmentChanged($event)" [(ngModel)]="valueOfSlide"  color="success">
+  </ion-toolbar> --> <!-- (ionChange)="segmentChanged($event)" -->
+  <ion-segment mode='md'  [disabled]="true" [(ngModel)]="valueOfSlide"  color="success">
     <ion-segment-button mode='md'  value="one" color="success">
       <ion-label>Step 1</ion-label>
     </ion-segment-button>
@@ -14,6 +14,7 @@
 </ion-header>
 
 <ion-content *ngIf="valueOfSlide == 'one'">
+  <form [formGroup]="signinform">
 <ion-grid>
   <ion-row>
     <ion-col size="10" offset="1"><h1>Heading One</h1></ion-col>
@@ -22,24 +23,36 @@
   <ion-row>
     <ion-col size="10" offset="1" class="my-1">
       <ion-label  >First Name</ion-label>
-      <ion-input ></ion-input>
+      <ion-input type="text" formControlName="firstName"></ion-input>
+      <div *ngIf="validation.firstName.errors && (validation.firstName.dirty || validation.firstName.touched)">
+        <div class="text-danger" *ngIf="validation.firstName?.errors?.required">Field is invalid!
+        </div>
+      </div>
     </ion-col>
     <ion-col size="10" offset="1" class="my-1">
       <ion-label >Last Name</ion-label>
-      <ion-input></ion-input>
+      <ion-input type="text"  formControlName="lastName"></ion-input>
+      <!-- <div *ngIf="validation.lastName.errors && (validation.lastName.dirty || validation.lastName.touched)">
+        <div class="text-danger" *ngIf="validation.lastName?.errors?.required">Field is invalid!
+        </div>
+      </div> -->
     </ion-col>
     <ion-col size="10" offset="1" class="my-1">
       <ion-label >Email</ion-label>
-      <ion-input></ion-input>
+      <ion-input type="email"  formControlName="email"></ion-input>
+      <div *ngIf="validation.email.errors && (validation.email.dirty || validation.email.touched)">
+        <div class="text-danger" *ngIf="validation.email?.errors?.required">Field is invalid!
+        </div>
+      </div>
     </ion-col>
     <ion-col size="10" offset="1" class="my-1">
       <ion-label >Promo types</ion-label>
-      <ion-select>
-        <ion-select-option [value]="item" *ngFor="let item of promoType">{{item}}</ion-select-option>
+      <ion-select formControlName="promo" >  <!-- [selectedText]="'Free'" -->
+        <ion-select-option [value]="item" *ngFor="let item of promoType"  >{{item}}</ion-select-option>
       </ion-select>
     </ion-col>
     <ion-col size="10" offset="1" class="my-1">
-      <ion-checkbox checked="true"></ion-checkbox>
+      <ion-checkbox  formControlName="voucherCode"></ion-checkbox>
       <ion-label class="mx-2" >Available with voucher code</ion-label>
     </ion-col>
   </ion-row>
@@ -48,10 +61,11 @@
       <ion-button color="white" (click)="dismiss()" class="cancelbtn">Cancel</ion-button>
     </ion-col>
     <ion-col size="5" >
-      <ion-button style="float: right;" (click)="continue()">Continue</ion-button>
+      <ion-button style="float: right;" (click)="continue()" type="submit" [disabled]="!signinform.valid">Continue</ion-button>
     </ion-col>
   </ion-row>
 </ion-grid>
+</form>
 </ion-content>
 
 <ion-content *ngIf="valueOfSlide == 'two'">
@@ -93,10 +107,7 @@
           <div class="content py-2">
             Step 3
           </div>
-      </div>
-
-
-      </div>
+      </div> </div>
 
     </ion-row>
 
@@ -105,7 +116,7 @@
         <ion-button color="white" (click)="back()" class="backbtn">Back</ion-button>
       </ion-col>
       <ion-col size="5" >
-        <ion-button style="float: right;" >Add</ion-button>
+        <ion-button style="float: right;" (click)="add()">Add</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
