--- a/src/global.scss
+++ b/src/global.scss
@@ -51,7 +51,7 @@ ion-input{
     ion-select{
         width: 60% !important;
         border-radius: 2px !important;
-        border: 1px solid black;
+        border: 1px solid rgb(62,186,132);
         max-width: 100vw; // this is applying perfectly
         max-height: 6vh;
     }
@@ -59,7 +59,7 @@ ion-input{
 ion-select{
     width: 50% !important;
     border-radius: 2px !important;
-    border: 1px solid black;
+    border: 1px solid rgb(62,186,132);
     max-width: 50vw; // this is applying perfectly
     max-height: 6vh;
 }
