--- a/src/app/modal/view-modal/view-modal.page.scss
+++ b/src/app/modal/view-modal/view-modal.page.scss
@@ -17,6 +17,10 @@ h1{
     background-color: rgb(62,186,132);
 } */
 
+.segment-button-disabled {
+  opacity: 1 !important;
+}
+
 .container {
     width: 80%;
   }
