--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,23 +15,23 @@
 
   <ion-grid *ngIf="userData">
     <ion-row>
-      <ion-col>
+      <ion-col size="12">
         <ion-label>First Name:</ion-label>
         <ion-text>{{this.userData?.values?.firstName}}</ion-text>
-      </ion-col>
-      <ion-col>
+      </ion-col >
+      <ion-col size="12">
         <ion-label>Last Name:</ion-label>
         <ion-text>{{this.userData?.values?.lastName}}</ion-text>
       </ion-col>
-      <ion-col>
+      <ion-col size="12">
         <ion-label>Email:</ion-label>
         <ion-text>{{this.userData?.values?.email}}</ion-text>
       </ion-col>
-      <ion-col>
+      <ion-col size="12">
         <ion-label>Promo Type:</ion-label>
         <ion-text>{{this.userData?.values?.promo}}</ion-text>
       </ion-col>
-      <ion-col>
+      <ion-col size="12">
         <ion-button color="primary" (click)="edit(this.userData?.values)" >Edit</ion-button>
       </ion-col>
     </ion-row>
