--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,6 +3,7 @@
     <ion-title>
       Blank
     </ion-title>
+   <!--  <ion-button color="primary" [routerLink]="['/profile']"  >Profile</ion-button> -->
   </ion-toolbar>
 </ion-header>
 
